using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
    public static readonly string isMoving = "isMoving";
    public static readonly string isJumping = "isJumping";
    public static readonly string isGrounded = "isGrounded";
    public static readonly string isFalling = "isFalling";
    public static readonly string isRunning = "isRunning";
    public static readonly string isTouchingCeiling = "isTouchingCeiling"; // Thêm mới
    public static readonly string isNearCliff = "isNearCliff";             // Thêm mới
    public static readonly string isTouchingWall = "isTouchingWall";       // Thêm mới
    public static readonly string isAttacking = "isAttacking"; // Thêm dòng này
    public static readonly string canMove = "canMove";
}